--- a/src/app/product/product-listings/product-listings.component.html
+++ b/src/app/product/product-listings/product-listings.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div class="col-sm" *ngFor="let product of products; let productId = index">
-      <a [routerLink]="[productId]" >
+      <a [routerLink]="[product._id]" >
         <div class="card">
           <img src="{{product.coverimage}}" class="card-img-top" alt="...">
           <div class="card-image">
